# dydx-trading-bot

./: bot_agents.json  close_prices.csv  cointegrated_pairs.csv  pyproject.toml
app/: connections.py  constants.py  func_bot_agent.py  func_cointegration.py  func_entry_pairs.py  func_exit_pairs.py  func_messaging.py  func_private.py  func_public.py  func_utils.py  main.py
