[tool.poetry]
name = "dydx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dydx-v3-python = "^2.0.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
pytest = "^7.3.1"
statsmodels = "^0.13.5"
python-decouple = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
